@@ -142,29 +142,6 @@ parameter_list|)
 function_decl|;
 end_function_decl
 
-begin_function_decl
-specifier|static
-name|void
-name|stroke_dialog_paint_info_selected
-parameter_list|(
-name|GimpContainerView
-modifier|*
-name|view
-parameter_list|,
-name|GimpViewable
-modifier|*
-name|viewable
-parameter_list|,
-name|gpointer
-name|insert_data
-parameter_list|,
-name|GimpStrokeOptions
-modifier|*
-name|options
-parameter_list|)
-function_decl|;
-end_function_decl
-
 begin_comment
 comment|/*  public function  */
 end_comment
@@ -959,29 +936,14 @@ name|gimp
 operator|->
 name|paint_info_list
 argument_list|,
-name|context
-argument_list|,
-literal|16
-argument_list|,
-literal|0
-argument_list|)
-expr_stmt|;
-name|gimp_container_view_select_item
-argument_list|(
-name|GIMP_CONTAINER_VIEW
-argument_list|(
-name|combo
-argument_list|)
-argument_list|,
-name|GIMP_VIEWABLE
-argument_list|(
 name|GIMP_CONTEXT
 argument_list|(
 name|options
 argument_list|)
-operator|->
-name|paint_info
-argument_list|)
+argument_list|,
+literal|16
+argument_list|,
+literal|0
 argument_list|)
 expr_stmt|;
 name|gtk_box_pack_start
@@ -1003,20 +965,6 @@ expr_stmt|;
 name|gtk_widget_show
 argument_list|(
 name|combo
-argument_list|)
-expr_stmt|;
-name|g_signal_connect
-argument_list|(
-name|combo
-argument_list|,
-literal|"select-item"
-argument_list|,
-name|G_CALLBACK
-argument_list|(
-name|stroke_dialog_paint_info_selected
-argument_list|)
-argument_list|,
-name|options
 argument_list|)
 expr_stmt|;
 name|g_object_set_data
@@ -1398,18 +1346,6 @@ expr_stmt|;
 block|}
 comment|/* fallthrough */
 default|default:
-name|g_signal_handlers_disconnect_by_func
-argument_list|(
-name|combo
-argument_list|,
-name|G_CALLBACK
-argument_list|(
-name|stroke_dialog_paint_info_selected
-argument_list|)
-argument_list|,
-name|options
-argument_list|)
-expr_stmt|;
 name|gtk_widget_destroy
 argument_list|(
 name|dialog
@@ -1417,42 +1353,6 @@ argument_list|)
 expr_stmt|;
 break|break;
 block|}
-block|}
-end_function
-
-begin_function
-specifier|static
-name|void
-DECL|function|stroke_dialog_paint_info_selected (GimpContainerView * view,GimpViewable * viewable,gpointer insert_data,GimpStrokeOptions * options)
-name|stroke_dialog_paint_info_selected
-parameter_list|(
-name|GimpContainerView
-modifier|*
-name|view
-parameter_list|,
-name|GimpViewable
-modifier|*
-name|viewable
-parameter_list|,
-name|gpointer
-name|insert_data
-parameter_list|,
-name|GimpStrokeOptions
-modifier|*
-name|options
-parameter_list|)
-block|{
-name|g_object_set
-argument_list|(
-name|options
-argument_list|,
-literal|"paint-info"
-argument_list|,
-name|viewable
-argument_list|,
-name|NULL
-argument_list|)
-expr_stmt|;
 block|}
 end_function
 
